<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:text="Tic-Tac-Toe"
        android:textSize="68sp"
        app:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="170dp"
        android:contentDescription="@string/image0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/grid" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="352dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5sp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="145dp"
                android:layout_height="107dp"
                android:contentDescription="@string/image6"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="0" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="94dp"
                android:layout_height="117dp"
                android:contentDescription="@string/image7"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="150dp"
                android:layout_height="117dp"
                android:contentDescription="@string/image8"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5sp">

            <ImageView
                android:id="@+id/imageView0"
                android:layout_width="142dp"
                android:layout_height="106dp"
                android:contentDescription="@string/image1"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="3" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="97dp"
                android:layout_height="104dp"
                android:contentDescription="@string/image2"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="4" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="104dp"
                android:contentDescription="@string/image3"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="5sp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="145dp"
                android:layout_height="117dp"
                android:contentDescription="@string/image4"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="6" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="96dp"
                android:layout_height="117dp"
                android:contentDescription="@string/image5"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="7" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="117dp"
                android:contentDescription="@string/image9"
                android:onClick="playerTap"
                android:padding="10sp"
                android:tag="8" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/status"
        android:text="@string/first"
        android:textColor="#C34949"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>